# kghub-downloader

./: 404.html  Makefile  README.md  action.yaml  index.html  mkdocs.yaml  objects.inv  pyproject.toml  sitemap.xml  tox.ini
.github/workflows/: pages.yaml  publish.yaml  test.yaml  test.yml
docs/: index.md
example/: download.yaml  gocam_download.yaml  query.json
kghub_downloader/: __init__.py  download.py  download_utils.py  elasticsearch.py  main.py  model.py  schemas.py  schemes.py  upload.py
search/: search_index.json
test/: conftest.py  test_download.py  test_mirror.py
test/integration/: test_download.py
test/resources/: download.yaml  testfile.txt
test/unit/: test_ftp.py  test_index_download.py  test_mirror.py  test_parse_url.py  test_register_schema.py  test_verify_ssl.py  test_yaml.py
