[tool.poetry]
name = "kghub-downloader"
version = "0.0.0"
description = "Downloads and caches files for knowledge graph ETL"
authors = ["The Monarch Initiative <info@monarchinitiative.org>"]
readme = "README.md"

[tool.poetry.scripts]
downloader = "kghub_downloader.main:typer_app"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
elasticsearch = ">7.0, <9.0"
compress-json = ">1.0, <2.0"
PyYAML = ">5.0,<7.0"
tqdm = ">=4.62.3"
google-cloud-storage = "^2.1.0"
typer ="^0.12.3"
mkdocs = ">=1.4"
mkdocs-material = ">=9.5"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
gdown = ">=4.7.1"
boto3 = ">=1.34.35"
pydantic = "^2.9.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"

[tool.poetry.group.dev.dependencies]
moto = "^5.0.1"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
