[tool.poetry]
name = "kghub-downloader"
version = "0.0.0"
description = "Downloads and caches files for knowledge graph ETL"
authors = ["The Monarch Initiative <info@monarchinitiative.org>"]
readme = "README.md"

[tool.poetry.scripts]
downloader = "kghub_downloader.main:typer_app"

[tool.poetry.dependencies]
python = ">=3.8, <4.0"
elasticsearch = ">7.0, <9.0"
compress-json = ">1.0, <2.0"
PyYAML = ">5.0,<7.0"
tqdm = ">=4.62.3"
google-cloud-storage = "^2.1.0"
typer ="^0.12.3"
mkdocs = ">=1.4"
mkdocs-material = ">=9.5"
mkdocstrings = {extras = ["python"], version = "^0.20.0"}
gdown = ">=4.7.1"
boto3 = ">=1.34.35"
pydantic = "^2.9.1"
pydantic-settings = "^2.5.2"

[tool.poetry.group.dev.dependencies]
moto = "^5.0.1"
mypy = "^1.11.2"
tox = ">=4.16.0"
pytest = ">=8.3.2"

[tool.poetry-dynamic-versioning]
enable = true
vcs = "git"
style = "pep440"

[tool.black]
line-length = 120
target-version = ["py38", "py39", "py310"]

[tool.ruff]
lint.extend-ignore = [
    "D211",  # `no-blank-line-before-class`
    "D212",  # `multi-line-summary-first-line`
    "D203",  # `blank-line-before-docstring`
    ]
line-length = 120

# Allow autofix for all enabled rules (when `--fix`) is provided.
lint.fixable = ["ALL"]

# Select or ignore from https://beta.ruff.rs/docs/rules/
lint.select = [
    "B",  # bugbear
    "D",  # pydocstyle
    "E",  # pycodestyle errors
    "F",  # Pyflakes
    "I",  # isort
    "S",  # flake8-bandit
    "W",  # Warning
]

lint.unfixable = []
target-version = "py310"

[tool.ruff.lint.mccabe]
# Unlike Flake8, default to a complexity level of 10.
max-complexity = 10

[tool.codespell]
skip = "*.po,*.ts,.git,pyproject.toml"
count = ""
quiet-level = 3
# ignore-words-list = ""

[build-system]
requires = ["poetry-core>=1.0.0", "poetry-dynamic-versioning"]
build-backend = "poetry_dynamic_versioning.backend"
